--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@vue/eslint-config-standard": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "^10.0.3",
+    "compression-webpack-plugin": "^6.1.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "less-loader": "^6.0.0",
